feat(service-worker): wip investigate defer

--- a/devtools/projects/demo-standalone/src/app/demo-app/todo/home/BUILD.bazel
+++ b/devtools/projects/demo-standalone/src/app/demo-app/todo/home/BUILD.bazel
@@ -5,6 +5,7 @@ package(default_visibility = ["//visibility:public"])
 ng_module(
     name = "home",
     srcs = [
+        "ipsum.component.ts",
         "sample.pipe.ts",
         "todo.component.ts",
         "todos.component.ts",
